--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,7 @@
         <module>video-common</module>
         <module>video-pojo</module>
         <module>video-mapper</module>
+        <module>video-service</module>
     </modules>
 
     <build>
