complete register function

--- a/video-api/src/main/resources/application.properties
+++ b/video-api/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+spring.application.name=mini-video
+server.port=8080
+server.servlet.context-path=/mini-video
+spring.datasource.username=xzmeasy
+spring.datasource.password=Dev950210!
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/mini-video?serverTimezone=UTC
+mybatis.type-aliases-package=com.video.pojo
+mybatis.mapper-locations=classpath*:/mapper/*.xml
+logging.level.web=debug
 
