--- a/video-mapper/pom.xml
+++ b/video-mapper/pom.xml
@@ -26,6 +26,11 @@
             <artifactId>mysql-connector-java</artifactId>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>com.video</groupId>
+            <artifactId>video-pojo</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 </project>
