上传音视频

--- a/video-api/src/main/resources/application.properties
+++ b/video-api/src/main/resources/application.properties
@@ -1,26 +1,21 @@
 spring.application.name=mini-video
-
 server.port=8080
 server.servlet.context-path=/mini-video
-
 spring.datasource.username=xzmeasy
 spring.datasource.password=Dev950210!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/mini-video?serverTimezone=UTC
-
 mybatis.type-aliases-package=com.video.pojo
 mybatis.mapper-locations=classpath*:/mapper/*.xml
-
 logging.level.web=debug
-
 spring.redis.client-name=mini-video-1
 spring.redis.host=192.168.2.130
 spring.redis.password=Dev950210!
 spring.redis.timeout=60000
-
 spring.jackson.default-property-inclusion=non_null
-
-spring.qiniu.bucket= xzmeasy-mini-video
-spring.qiniu.access-key= 3GLwXAmBCPoadAC_LA7Hq1aPKGYALhPuu5MyskCA
-spring.qiniu.secret-key= V_XTgmoMm2ESipb2hn9G2C3u-VzR7syFEB0R73KF
-spring.qiniu.domain= q5aa1pg8n.bkt.clouddn.com
+spring.qiniu.bucket=xzmeasy-mini-video
+spring.qiniu.access-key=3GLwXAmBCPoadAC_LA7Hq1aPKGYALhPuu5MyskCA
+spring.qiniu.secret-key=V_XTgmoMm2ESipb2hn9G2C3u-VzR7syFEB0R73KF
+spring.qiniu.domain=q5aa1pg8n.bkt.clouddn.com
+spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-request-size=50MB
