完善视频上传功能

--- a/video-api/src/main/resources/application.properties
+++ b/video-api/src/main/resources/application.properties
@@ -19,3 +19,4 @@ spring.qiniu.secret-key=V_XTgmoMm2ESipb2hn9G2C3u-VzR7syFEB0R73KF
 spring.qiniu.domain=q5aa1pg8n.bkt.clouddn.com
 spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=50MB
+ffmpeg.command-path=D:\\xzmeasy\\Application\\FFMpeg\\ffmpeg\\ffmpeg\\bin\\ffmpeg.exe
