--- a/video-api/pom.xml
+++ b/video-api/pom.xml
@@ -18,7 +18,11 @@
             <groupId>org.qiniu</groupId>
             <artifactId>qiniu-spring-boot-starter</artifactId>
             <version>0.1.0</version>
-            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.ffmpeg</groupId>
+            <artifactId>ffmpeg-spring-boot-starter</artifactId>
+            <version>0.0.1</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
